--- a/699/Capstone Project/css/cap.css
+++ b/699/Capstone Project/css/cap.css
@@ -6,12 +6,13 @@ body {
 	background-color: #DCEEF7;
 	
 }
-a {
-	padding: 15px;
-    margin: 3px;
-	font-size: 175%;
-	background-color:  your_color_of_choice; 
-	color: #2B5195; 
+a{
+	pandding:15px;
+    margin:5px;
+	font-size:25px;
+	background-color:;
+	color:;
+
 }
 h1{
 color:#000000;
@@ -22,3 +23,12 @@ color:#000000;
 font-size: 175%
 
 }
+
+	
+
+.A {
+	width:100%;
+	text-align: left;
+	font-size:25px;
+	
+	
